popup overflow fix

--- a/main/static/style/generalstyle.css
+++ b/main/static/style/generalstyle.css
@@ -126,6 +126,7 @@ h2 {
     position: relative;
     transition: all 5s ease-in-out;
     min-height: calc(100vh - 120px);
+    max-height: calc(100vh - 120px);
     box-sizing: border-box;
     overflow-y: auto;
   }
@@ -152,8 +153,9 @@ h2 {
   }
 
   .popup .content {
-    overflow: auto;
+    overflow-y: auto;
     font-size: 0.8em;
+
   }
   
   @media (max-width: 700px){
